--- a/composer.json
+++ b/composer.json
@@ -6,21 +6,24 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
-        "guzzlehttp/guzzle": "^7.2",
-        "laravel/framework": "^9.3.1",
-        "laravel/sanctum": "^2.14.1",
-        "laravel/tinker": "^2.7"
+        "guzzlehttp/guzzle": "^7",
+        "laravel/framework": "^9",
+        "laravel/sanctum": "^2",
+        "laravel/tinker": "^2"
     },
     "require-dev": {
-        "fakerphp/faker": "^1.9.1",
-        "laravel/sail": "^1.0.1",
-        "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^6.1",
-        "phpunit/phpunit": "^9.5.10",
-        "spatie/laravel-ignition": "^1.0"
+        "fakerphp/faker": "^1",
+        "laravel/sail": "^1",
+        "mockery/mockery": "^1",
+        "nunomaduro/collision": "^6",
+        "phpunit/phpunit": "^9",
+        "spatie/laravel-ignition": "^1"
     },
     "config": {
-        "cache-dir": "/home/movielis/_domains/myapi.movielist.org/public_html/cache"
+        "cache-dir": "/home/movielis/_domains/myapi.movielist.org/public_html/cache",
+        "optimize-autoloader": true,
+        "preferred-install": "dist",
+        "sort-packages": true
     },
     "autoload": {
         "psr-4": {
@@ -53,11 +56,6 @@
         "laravel": {
             "dont-discover": []
         }
-    },
-    "config": {
-        "optimize-autoloader": true,
-        "preferred-install": "dist",
-        "sort-packages": true
     },
     "minimum-stability": "dev",
     "prefer-stable": true
