--- a/composer.json
+++ b/composer.json
@@ -5,25 +5,20 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^8.0.2",
-        "guzzlehttp/guzzle": "^7",
-        "laravel/framework": "^9",
-        "laravel/sanctum": "^2",
-        "laravel/tinker": "^2"
+        "php": "^8.1",
+        "guzzlehttp/guzzle": "^7.2",
+        "laravel/framework": "^10.8",
+        "laravel/sanctum": "^3.2",
+        "laravel/tinker": "^2.8"
     },
     "require-dev": {
-        "fakerphp/faker": "^1",
-        "laravel/sail": "^1",
-        "mockery/mockery": "^1",
-        "nunomaduro/collision": "^6",
-        "phpunit/phpunit": "^9",
-        "spatie/laravel-ignition": "^1"
-    },
-    "config": {
-        "cache-dir": "/home/movielis/_domains/myapi.movielist.org/public_html/cache",
-        "optimize-autoloader": true,
-        "preferred-install": "dist",
-        "sort-packages": true
+        "fakerphp/faker": "^1.9.1",
+        "laravel/pint": "^1.0",
+        "laravel/sail": "^1.18",
+        "mockery/mockery": "^1.4.4",
+        "nunomaduro/collision": "^7.0",
+        "phpunit/phpunit": "^10.1",
+        "spatie/laravel-ignition": "^2.0"
     },
     "autoload": {
         "psr-4": {
@@ -43,13 +38,13 @@
             "@php artisan package:discover --ansi"
         ],
         "post-update-cmd": [
-            "@/usr/local/bin/php artisan vendor:publish --tag=laravel-assets --ansi --force"
+            "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
         ],
         "post-root-package-install": [
-            "@/usr/local/bin/php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
         "post-create-project-cmd": [
-            "@/usr/local/bin/php artisan key:generate --ansi"
+            "@php artisan key:generate --ansi"
         ]
     },
     "extra": {
@@ -57,6 +52,15 @@
             "dont-discover": []
         }
     },
-    "minimum-stability": "dev",
+    "config": {
+        "optimize-autoloader": true,
+        "preferred-install": "dist",
+        "sort-packages": true,
+        "allow-plugins": {
+            "pestphp/pest-plugin": true,
+            "php-http/discovery": true
+        }
+    },
+    "minimum-stability": "stable",
     "prefer-stable": true
 }
